--- a/lab1c/app/css/styles/main.css
+++ b/lab1c/app/css/styles/main.css
@@ -8,10 +8,17 @@ html, body {
     height: 100%;
 }
 
-.container {
+.center {
     position: relative;
+    height: 100%;
+    width: 100%;
+    background-color: #28293c;
 }
 
-#lab1c-canvas {
-    display: block;
+.center * {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
